// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /osc/commands/execute _listAccessPoints should respond with results 1`] = `
[
  {
    "connectionPriority": 3,
    "ipAddressAllocation": "dynamic",
    "security": "WPA/WPA2 PSK",
    "ssid": "Test-Access-Point3",
    "ssidStealth": false,
  },
  {
    "connectionPriority": 2,
    "defaultGateway": "192.168.1.1",
    "ipAddress": "192.168.1.254",
    "ipAddressAllocation": "static",
    "security": "WPA/WPA2 PSK",
    "ssid": "Test-Access-Point2",
    "ssidStealth": false,
    "subnetMask": "24",
  },
  {
    "connectionPriority": 1,
    "defaultGateway": "192.168.1.1",
    "ipAddress": "192.168.1.253",
    "ipAddressAllocation": "static",
    "security": "WEP",
    "ssid": "Test-Access-Point1",
    "ssidStealth": true,
    "subnetMask": "24",
  },
]
`;

exports[`THETA X POST /osc/commands/execute _listAccessPoints should respond with results 1`] = `
[
  {
    "connectionPriority": 3,
    "ipAddressAllocation": "dynamic",
    "security": "WPA/WPA2 PSK",
    "ssid": "Test-Access-Point3",
    "ssidStealth": false,
  },
  {
    "connectionPriority": 2,
    "defaultGateway": "192.168.1.1",
    "ipAddress": "192.168.1.254",
    "ipAddressAllocation": "static",
    "security": "WPA/WPA2 PSK",
    "ssid": "Test-Access-Point2",
    "ssidStealth": false,
    "subnetMask": "24",
  },
  {
    "connectionPriority": 1,
    "defaultGateway": "192.168.1.1",
    "ipAddress": "192.168.1.253",
    "ipAddressAllocation": "static",
    "security": "WEP",
    "ssid": "Test-Access-Point1",
    "ssidStealth": true,
    "subnetMask": "24",
  },
]
`;

exports[`THETA Z1 POST /osc/commands/execute _listAccessPoints should respond with results 1`] = `
[
  {
    "connectionPriority": 1,
    "defaultGateway": "192.168.1.1",
    "ipAddress": "192.168.1.254",
    "ipAddressAllocation": "static",
    "security": "WEP",
    "ssid": "Test-Access-Point1",
    "ssidStealth": true,
    "subnetMask": "255.255.255.0",
  },
  {
    "connectionPriority": 2,
    "defaultGateway": "192.168.1.1",
    "ipAddress": "192.168.1.254",
    "ipAddressAllocation": "static",
    "security": "WPA/WPA2 PSK",
    "ssid": "Test-Access-Point2",
    "ssidStealth": false,
    "subnetMask": "255.255.255.0",
  },
  {
    "connectionPriority": 3,
    "ipAddressAllocation": "dynamic",
    "security": "WPA/WPA2 PSK",
    "ssid": "Test-Access-Point3",
    "ssidStealth": false,
  },
]
`;
